[package]
name = "cumulus_sync"
version = "0.1.0"
authors = ["Egor Berezovskiy <egor.neon@gmail.com>"]

[dependencies]
notify = "4.0.6"
walkdir = "2.2.5"
structopt = "0.2.11"
structopt-derive = "0.2.11"
reqwest = "0.9.2"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
uuid = {version = "0.7.1",features = ["serde","v4"]}
chrono = {version = "0.4.6",features = ["serde"]}
log = "0.4.5"
env_logger = "0.5.13"
failure = "0.1.3"
