[package]
name = "cumulus_sync"
version = "0.1.0"
authors = ["Egor Berezovskiy <egor.neon@gmail.com>"]
edition="2018"

[dependencies]
notify = "4.0.6"
walkdir = "2.2.7"
structopt = "0.2.14"
structopt-derive = "0.2.14"
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
uuid = {version = "0.7.1",features = ["serde","v4"]}
chrono = {version = "0.4.6",features = ["serde"]}
log = "0.4.6"
env_logger = "0.6.0"
failure = "0.1.3"
